--- a/index.html
+++ b/index.html
@@ -16,96 +16,15 @@
     <div class="grid-container">
         <div class="grid-item2">
             <span>
-                Dear Madam, I’m not sure how many more times I need to try to impress
-                you, but here I go again, even though I have little hope left.
+                You know I love you, and I know you love me, but I have not proposed to you yet. So today, I'm trying... hahaha.
             </span>
         </div>
 
-        <div class="grid-item"><img src="./img/mona2.jpeg" alt="Image 2" /></div>
-        <div class="grid-item"><img src="./img/mona23.jpeg" alt="Image 3" /></div>
-        <div class="grid-item"><img src="./img/mona24.jpeg" alt="Image 4" /></div>
-        <div class="grid-item"><img src="./img/mona25.jpeg" alt="Image 5" /></div>
-        <div class="grid-item"><img src="./img/mona26.jpeg" alt="Image 6" /></div>
-        <div class="grid-item"><img src="./img/mona27.jpeg" alt="Image 7" /></div>
-        <div class="grid-item2">
-            <span>
-             Dear my love, You are the one with whom I see my present, my future. 
-             You are the one with whom I want to live the rest of my life.
-            </span>
-        </div>
-        <div class="grid-item"><img src="./img/mona28.jpeg" alt="Image 9" /></div>
-        <div class="grid-item"><img src="./img/mona29.jpeg" alt="Image 10" /></div>
-        <div class="grid-item"><img src="./img/mona30.jpeg" alt="Image 11" /></div>
-        <div class="grid-item"><img src="./img/mona31.jpeg" alt="Image 12" /></div>
-        <div class="grid-item"><img src="./img/mona32.jpeg" alt="Image 13" /></div>
-        <div class="grid-item"><img src="./img/mona33.jpeg" alt="Image 14" /></div>
-        <div class="grid-item2">
-            <span>
-                Dear my happeniess, I don't know what will be the our future, But keep in mind
-                You were my first love and you will be mine last one.
-            </span>
-        </div>
-        <div class="grid-item"><img src="./img/mona2.jpeg" alt="Image 16" /></div>
-        <div class="grid-item"><img src="./img/mona56.jpeg" alt="Image 17" /></div>
-        <div class="grid-item"><img src="./img/mona4.jpeg" alt="Image 18" /></div>
-        <div class="grid-item"><img src="./img/mona5.jpeg" alt="Image 19" /></div>
-        <div class="grid-item2">
-            <span>
-                Dear future wife, I don't know what our future holds, but remember, 
-                you were my first love and you will be my last.
-            </span>
-        </div>
-        <div class="grid-item"><img src="./img/mona6.jpeg" alt="Image 21" /></div>
-        <div class="grid-item"><img src="./img/mona7.jpeg" alt="Image 22" /></div>
-        <div class="grid-item"><img src="./img/mona8.jpeg" alt="Image 23" /></div>
-        <div class="grid-item"><img src="./img/mona9.jpeg" alt="Image 24" /></div>
-        <div class="grid-item"><img src="./img/mona10.jpeg" alt="Image 25" /></div>
-        <div class="grid-item"><img src="./img/mona11.jpeg" alt="Image 26" /></div>
-        <div class="grid-item2">
-            <span>
-                Dear everything, Just want to say it one more time: you are my school crush, 
-                my special one, my first love, my last love, my best friend, my happiness.
-            </span>
-        </div>
-        <div class="grid-item"><img src="./img/mona12.jpeg" alt="Image 28" /></div>
-        <div class="grid-item"><img src="./img/mona13.jpeg" alt="Image 29" /></div>
-        <div class="grid-item"><img src="./img/mona14.jpeg" alt="Image 30" /></div>
-        <div class="grid-item"><img src="./img/mona15.jpeg" alt="Image 31" /></div>
-        <div class="grid-item"><img src="./img/mona16.jpeg" alt="Image 33" /></div>
-        <div class="grid-item"><img src="./img/mona17.jpeg" alt="Image 34" /></div>
-        <div class="grid-item"><img src="./img/mona18.jpeg" alt="Image 35" /></div>
-        <div class="grid-item"><img src="./img/mona19.jpeg" alt="Image 36" /></div>
-        <div class="grid-item"><img src="./img/mona20.jpeg" alt="Image 37" /></div>
-        <div class="grid-item"><img src="./img/mona21.jpeg" alt="Image 38" /></div>
-        <div class="grid-item"><img src="./img/mona22.jpeg" alt="Image 39" /></div>
-        <div class="grid-item"><img src="./img/mona34.jpeg" alt="Image 40" /></div>
-        <div class="grid-item"><img src="./img/mona2.jpeg" alt="Image 16" /></div>
-        <div class="grid-item"><img src="./img/mona35.jpeg" alt="Image 41" /></div>
-        <div class="grid-item"><img src="./img/mona36.jpeg" alt="Image 40" /></div>
-        <div class="grid-item"><img src="./img/mona37.jpeg" alt="Image 41" /></div>
-        <div class="grid-item"><img src="./img/mona38.jpeg" alt="Image 40" /></div>
-        <div class="grid-item"><img src="./img/mona39.jpeg" alt="Image 41" /></div>
-        <div class="grid-item"><img src="./img/mona40.jpeg" alt="Image 40" /></div>
-        <div class="grid-item"><img src="./img/mona41.jpeg" alt="Image 41" /></div>
-        <div class="grid-item"><img src="./img/mona42.jpeg" alt="Image 40" /></div>
-        <div class="grid-item"><img src="./img/mona43.jpeg" alt="Image 41" /></div>
-        <div class="grid-item"><img src="./img/mona44.jpeg" alt="Image 40" /></div>
-        <div class="grid-item"><img src="./img/mona45.jpeg" alt="Image 41" /></div>
-        <div class="grid-item"><img src="./img/mona46.jpeg" alt="Image 41" /></div>
-        <div class="grid-item"><img src="./img/mona47.jpeg" alt="Image 41" /></div>
-        <div class="grid-item"><img src="./img/mona48.jpeg" alt="Image 41" /></div>
-        <div class="grid-item"><img src="./img/mona49.jpeg" alt="Image 41" /></div>
-        <div class="grid-item"><img src="./img/mona50.jpeg" alt="Image 41" /></div>
-        <div class="grid-item"><img src="./img/mona51.jpeg" alt="Image 41" /></div>
-        <div class="grid-item"><img src="./img/mona52.jpeg" alt="Image 41" /></div>
-        <div class="grid-item"><img src="./img/mona53.jpeg" alt="Image 41" /></div>
-        <div class="grid-item"><img src="./img/mona54.jpeg" alt="Image 41" /></div>
-        <div class="grid-item"><img src="./img/mona55.jpeg" alt="Image 41" /></div>
-        <div class="grid-item"><img src="./img/mona2.jpeg" alt="Image 16" /></div>
-        <div class="grid-item"><img src="./img/mona2.jpeg" alt="Image 16" /></div>
-        <div class="grid-item"><img src="./img/mona2.jpeg" alt="Image 16" /></div>
-        <div class="grid-item"><img src="./img/mona2.jpeg" alt="Image 16" /></div>
-        <div class="grid-item"><img src="./img/mona2.jpeg" alt="Image 16" /></div>
+        <div class="grid-item"><img src="./img/nisha1.jpeg" alt="Image 2" /></div>
+        <div class="grid-item"><img src="./img/nisha2.jpeg" alt="Image 2" /></div>
+        <div class="grid-item"><img src="./img/nisha3.jpeg" alt="Image 2" /></div>
+        <div class="grid-item"><img src="./img/nisha4.jpeg" alt="Image 2" /></div>
+        <div class="grid-item"><img src="./img/nisha5.jpeg" alt="Image 2" /></div>
     </div>
     <div class="footer">
         <div class="img-container">
@@ -122,21 +41,16 @@
 तुम्हारे साथ सोना, तुम्हारे साथ जागना चाहता हूँ!
 तुम्हारे हाथ में हाथ डालकर चलना चाहता हूँ!
 दिल की हर बात सुनना और सुनाना चाहता हूँ!
-तुम मेरे लिए ब्रेकफास्ट बनाओ और मैं तुम्हारे लिए डिनर बनाना चाहता हूँ!
 हर यूनिवर्स में तुमको ही अपना बनाना चाहता हूँ!
 तुम रोओ तो तुमको हँसाना चाहता हूँ!
 तुम गुस्सा करो तो तुमको मनाना चाहता हूँ!
 तुम धूप में निकलो तो तुम्हारा छाता बनना चाहता हूँ!
-तुम्हारे साये की तरह अनंत तक तुम्हारे साथ चलना चाहता हूँ!
-तुमको हर कीमत पर अपना बनाना चाहता हूँ, हर जनम में अपना चाहता हूँ!
 जिस कंधे पर सिर रख सको वो कंधा बनना चाहता हूँ!
-पहला न सही पर तुम्हारा आखिरी प्यार बनना चाहता हूँ!
 तुम्हारी आँखों में आँसू न आने दूँ, वो हमसफर बनना चाहता हूँ!
 तुम्हारे साथ हँसना चाहता हूँ, तुम्हारे साथ रोना चाहता हूँ!
 तुमको दिल की हर बात बताना चाहता हूँ!
 तुमको अपनी दुनिया की शहजादी बनाना चाहता हूँ!
 तुमको हर पल सोच सकूँ वो याद बनना चाहता हूँ!
-मुझे पता है मैं पागल हो गया हूँ जो एक अफसरा को अपना बनाना चाहता हूँ!
 </pre>
         
         </div> 
